[gd_scene load_steps=33 format=4 uid="uid://b6dksoddxtbn2"]

[ext_resource type="Script" path="res://res/script/level/demo_lvl_3.gd" id="1_dqsdx"]
[ext_resource type="PackedScene" uid="uid://dvnsgxwm8npnl" path="res://res/scene/misc/reset_btn.tscn" id="2_lq856"]
[ext_resource type="PackedScene" uid="uid://blx5obatbc20l" path="res://res/scene/transitions.tscn" id="2_q0cwg"]
[ext_resource type="PackedScene" uid="uid://ddhbq3qf847pa" path="res://res/scene/misc/pop_up.tscn" id="2_yyt0g"]
[ext_resource type="PackedScene" uid="uid://c1iebbd35ktk6" path="res://res/scene/movement_btn.tscn" id="3_iwpw0"]
[ext_resource type="FontFile" uid="uid://w0rbroaetxpt" path="res://res/BULKYPIX.TTF" id="4_br5j3"]
[ext_resource type="Texture2D" uid="uid://8ce4qjoio00i" path="res://res/asset/btn_new.png" id="5_3q48k"]
[ext_resource type="TileSet" uid="uid://hk4185xkt66y" path="res://res/asset/levelTilemap.tres" id="7_v4nhv"]
[ext_resource type="Texture2D" uid="uid://bshns7tmpr12s" path="res://res/asset/assetMap.png" id="8_ykfms"]
[ext_resource type="PackedScene" uid="uid://doasqt7hnptg2" path="res://res/scene/pressure_plate.tscn" id="9_ceywf"]
[ext_resource type="PackedScene" uid="uid://cq4qq33pvhn6w" path="res://res/scene/spawn/kotak.tscn" id="10_4djw5"]
[ext_resource type="PackedScene" uid="uid://dajhen4582udr" path="res://res/scene/doorx2.tscn" id="11_2tewk"]
[ext_resource type="PackedScene" uid="uid://ja8fwafi6jkj" path="res://res/scene/spawn/lever.tscn" id="12_3c4dj"]
[ext_resource type="PackedScene" uid="uid://cn0fnvadpgyfd" path="res://res/scene/player.tscn" id="13_ptffg"]
[ext_resource type="PackedScene" uid="uid://cs0jt0cfysv1u" path="res://res/scene/spawn/buku.tscn" id="14_d4b6w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_obw33"]
atlas = ExtResource("5_3q48k")
region = Rect2(5120, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjlrx"]
atlas = ExtResource("5_3q48k")
region = Rect2(5440, 0, 320, 320)

[sub_resource type="CircleShape2D" id="CircleShape2D_mbfph"]
radius = 160.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6o6t4"]
atlas = ExtResource("8_ykfms")
region = Rect2(960, 1088, 64, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6kyw"]
atlas = ExtResource("8_ykfms")
region = Rect2(960, 1088, 64, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0se1d"]
atlas = ExtResource("8_ykfms")
region = Rect2(1216, 768, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwuxe"]
atlas = ExtResource("8_ykfms")
region = Rect2(1216, 704, 64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tuvn4"]
size = Vector2(12, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dpw2"]
atlas = ExtResource("8_ykfms")
region = Rect2(1216, 768, 64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_flx8a"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2swu"]
size = Vector2(128, 64)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b6gsv"]
radius = 57.0
height = 168.0

[sub_resource type="Animation" id="Animation_pafcd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("special/jembatan1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("special/jembatan2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_a4ejt"]
resource_name = "jembatan1_off"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("special/jembatan1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("special/jembatan2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_enjhi"]
resource_name = "jembatan1_on"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("special/jembatan2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("special/jembatan1:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6r5j8"]
resource_name = "jembatans_sets"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("special/jembatan1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("special/jembatan2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wrei7"]
_data = {
"RESET": SubResource("Animation_pafcd"),
"jembatan1_off": SubResource("Animation_a4ejt"),
"jembatan1_on": SubResource("Animation_enjhi"),
"jembatans_sets": SubResource("Animation_6r5j8")
}

[node name="DemoLevel" type="Node2D" groups=["level"]]
position = Vector2(0, -1)
script = ExtResource("1_dqsdx")

[node name="ui_layer" type="CanvasLayer" parent="."]

[node name="loading" parent="ui_layer" instance=ExtResource("2_q0cwg")]
visible = false

[node name="papan" parent="ui_layer" instance=ExtResource("2_yyt0g")]
visible = false
position = Vector2(928, 479)
scale = Vector2(0.9, 0.9)
frame = 0
b1_task = "120"
b2_task = "150"
b3_task = "160"

[node name="btn_con" type="HBoxContainer" parent="ui_layer"]
custom_minimum_size = Vector2(360, 180)
offset_right = 360.0
offset_bottom = 180.0
size_flags_horizontal = 3

[node name="reset_btn" parent="ui_layer/btn_con" instance=ExtResource("2_lq856")]
position = Vector2(261, 95)

[node name="pauseBtn" type="TouchScreenButton" parent="ui_layer/btn_con"]
position = Vector2(14, 14)
scale = Vector2(0.5, 0.5)
texture_normal = SubResource("AtlasTexture_obw33")
texture_pressed = SubResource("AtlasTexture_jjlrx")
shape = SubResource("CircleShape2D_mbfph")
shape_visible = false

[node name="movement_btn" parent="ui_layer" instance=ExtResource("3_iwpw0")]

[node name="Panel" type="Panel" parent="ui_layer"]
anchors_preset = -1
anchor_left = 0.833
anchor_top = 0.059
anchor_right = 0.967
anchor_bottom = 0.119
offset_left = 0.639893
offset_top = 0.279995
offset_right = -0.640137
offset_bottom = 0.479996
grow_horizontal = 0

[node name="Label" type="Label" parent="ui_layer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.721273, 0.728712, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_br5j3")
theme_override_font_sizes/font_size = 60
text = "120"
horizontal_alignment = 1
vertical_alignment = 2

[node name="layer1" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAALAAkABAANAAMAAAAMAAkABAANAAMAAAANAAkABAANAAMAAAAPAAkABAANAAMAAAALAAgACQACAAEAAAANAAgABAANAAMAAAAOAAgABAANAAMAAAAMAAgABAANAAMAAAAOAAkABAANAAMAAAAPAAgABAANAAMAAAAQAAkACAAKAA0AAAAQAAgABAANAAMAAAAQAAcACAAJAAwAAAAPAAcABAANAAMAAAAOAAcABAANAAMAAAANAAcABAANAAMAAAAMAAcABAANAAMAAAARAAcABAANAAMAAAARAAgABAANAAMAAAARAAkABAANAAMAAAASAAkACAANAAMAAAASAAcACAANAAMAAAASAAgACAANAAMAAAASAAYACAANAAMAAAARAAYABAANAAMAAAAQAAYABAANAAMAAAAPAAYABAANAAMAAAAOAAYABAANAAMAAAANAAYABAANAAMAAAAMAAYABAANAAMAAAALAAYACQACAAAAAAALAAUABAANAAMAAAAMAAUABAANAAMAAAANAAUABAANAAMAAAAOAAUABAANAAMAAAAPAAUABAANAAMAAAAQAAUABAANAAMAAAARAAUABAANAAMAAAASAAUACAANAAMAAAASAAQACAANAAMAAAAQAAQABAANAAMAAAAPAAQABAANAAMAAAAOAAQABAANAAMAAAARAAQABAANAAMAAAAPAAMABAANAAMAAAAOAAMACAAJAA0AAAANAAMABAANAAMAAAAMAAMABAANAAMAAAALAAMABAANAAMAAAALAAQABAANAAMAAAAMAAQACAAKAA0AAAANAAQABAANAAMAAAAJAAEACAAGAAkAAAALAAEACAAGAAkAAAAMAAEACAAGAAkAAAANAAEACAAGAAkAAAAOAAEACAAGAAkAAAAPAAEACAAGAAkAAAATAAEACAAGAAkAAAAUAAEACAAGAAkAAAAUAAkACAANAAMAAAAUAAoACAANAAMAAAAUAAsACAANAAQAAAATAAsACAANAAQAAAASAAsACAANAAQAAAARAAsABAANAAQAAAAQAAsABAANAAQAAAAPAAsABAANAAQAAAAOAAsACQACAAAAAAANAAsACQABAAAAAAAMAAsACQABAAAAAAALAAsACQABAAEAAAAKAAsACQABAAEAAAAJAAsACQABAAEAAAAVAAYACAANAAMAAAAVAAcACAANAAMAAAAWAAcACAAIAA0AAAAWAAYACAANAAMAAAAXAAYACAAPAAMAAAAXAAcACAAPAAMAAAAYAAcACAAMAAgAAAAZAAcABAAGAAgAAAAJAAIABAAOAAEAAAAKAAIABAANAAMAAAALAAIABAAOAAEAAAAMAAIABAAOAAEAAAANAAIABAAOAAEAAAAOAAIABAAOAAEAAAAPAAIABAAOAAEAAAAQAAIABAAOAAEAAAARAAIABAAOAAEAAAATAAMACAANAAMAAAATAAQACAANAAMAAAATAAUACAAJAA0AAAATAAYACAANAAMAAAATAAcACAANAAMAAAATAAgACAANAAMAAAATAAkACAANAAMAAAASAAoACAANAAMAAAATAAoACAANAAMAAAARAAoABAANAAMAAAAQAAoABAANAAMAAAAPAAoABAANAAMAAAAOAAoABAANAAMAAAAKAAkABAANAAMAAAAJAAkABAANAAMAAAANAAoABAANAAMAAAAMAAoACAAJAA0AAAALAAoACQACAAAAAAAKAAoACQABAAAAAAAJAAoACQABAAAAAAAJAAgACQAAAAEAAAAKAAgACQABAAEAAAAJAAcACQAAAAAAAAAJAAYABAANAAMAAAAKAAYACQAAAAAAAAAKAAUABAANAAMAAAAJAAUACAAKAA0AAAAJAAQABAANAAMAAAAKAAQABAANAAMAAAAKAAMACAAGAA0AAAAJAAMABAANAAMAAAAIAAEACAAGAAkAAAAIAAIABAAMAAEAAAAIAAMABAAMAAIAAAAIAAQABAAMAAIAAAAIAAUABAAMAAIAAAAIAAYABAAMAAIAAAAIAAcABAAJAAIAAAAIAAgABAANAAMAAAAIAAkABAANAAMAAAAIAAoACQABAAAAAAAIAAsACQABAAEAAAASAAEACAAGAAkAAAAQAAEACAAGAAkAAAARAAEACAAGAAkAAAAVAAIACAAOAAEAAAAVAAMACAANAAMAAAAVAAQACAAJAAwAAAAWAAQACAANAAMAAAAWAAMACAANAAMAAAAWAAIACAAOAAEAAAAVAAEACAAGAAkAAAAWAAEACAAGAAkAAAAXAAEACAAGAAkAAAAXAAIACAAPAAEAAAAXAAMACAAPAAMAAAAXAAQACAAPAAMAAAAKAAcACQABAAEAAAALAAcACQACAAEAAAAXAAUACAAPAAMAAAAWAAUACAANAAMAAAAVAAUACAANAAMAAAAUAAUACAANAAMAAAAUAAcACAANAAMAAAAUAAgACAANAAMAAAAVAAgACAAKAA0AAAAWAAgACAANAAMAAAAXAAgACAAPAAMAAAAYAAgACAAMAAgAAAAZAAgABAAGAAgAAAAXAAkACQACAAAAAAAYAAkACAAMAAgAAAAZAAkABAAGAAgAAAAZAAYABAAGAAgAAAAYAAUACAAMAAgAAAAZAAUABAAGAAgAAAAYAAQACAAMAAgAAAAZAAQABAAGAAgAAAAIAAAACAAGAAgAAAAJAAAACAAGAAgAAAAKAAAACAAGAAgAAAALAAAACAAGAAgAAAAMAAAACAAGAAgAAAANAAAACAAGAAgAAAAOAAAACAAGAAgAAAAPAAAACAAGAAgAAAAQAAAACAAGAAgAAAARAAAACAAGAAgAAAASAAAACAAGAAgAAAATAAAACAAGAAgAAAAUAAAACAAGAAgAAAAVAAAACAAGAAgAAAAWAAAACAAGAAgAAAAXAAAACAAGAAgAAAAYAAAACAAGAAgAAAAYAAEACAAJAAkAAAAYAAIACAAMAAgAAAAYAAMACAAMAAgAAAAZAAMABAAGAAgAAAAZAAIABAAGAAgAAAAZAAEABAAGAAgAAAAZAAAACAAGAAgAAAAIAAwACAAGAAcAAAAJAAwACAAGAAcAAAAKAAwACAAGAAcAAAALAAwACAAGAAcAAAAMAAwACAAGAAcAAAANAAwACAAGAAcAAAAOAAwACAAGAAcAAAAPAAwACAAGAAcAAAAQAAwACAAGAAcAAAARAAwACAAGAAcAAAASAAwACAAGAAcAAAATAAwACAAGAAcAAAAUAAwACAAGAAcAAAAVAAwACAAGAAcAAAAVAAsACAANAAQAAAAVAAoACAANAAMAAAAWAAoACQAAAAEAAAAWAAsACQAAAAEAAAAWAAwACAAGAAcAAAAXAAwACAAGAAcAAAAXAAsACQACAAEAAAAXAAoACQACAAEAAAAYAAoACAAMAAgAAAAZAAoABAAGAAgAAAAZAAsABAAGAAgAAAAZAAwACAAGAAgAAAAYAAwACAAJAAgAAAAYAAsACAAMAAgAAAACAAAACAAGAAgAAAACAAEABAAKAAkAAAACAAYABAAKAAgAAAACAAcACAAGAAgAAAACAAgACAAGAAgAAAACAAkACAAGAAgAAAACAAoACAAGAAgAAAACAAsACAAGAAgAAAACAAwACAAGAAgAAAACAA0ACAAGAAgAAAACAA4ACAAGAAgAAAACAA8ACAAGAAgAAAADAAAACAAGAAgAAAADAAEACAAGAAkAAAADAAIABAAMAAEAAAADAAMABAAMAAIAAAADAAQABAAMAAIAAAADAAUABAAMAAQAAAADAAYAAAAHAAcAAAADAAcACAAPAAkAAAADAAgACAAPAAkAAAADAAkACAAPAAkAAAADAAoACAAPAAkAAAADAAsACAAPAAkAAAADAAwACAAKAAgAAAADAA0ACAAGAAgAAAADAA4ACAAGAAgAAAADAA8ACAAGAAgAAAAEAAAACAAGAAgAAAAEAAIABAANAAMAAAAEAAMABAANAAMAAAAEAAQACAAKAA0AAAAEAAUABAAJAAMAAAAEAAYABAAMAAIAAAAEAAcABAAMAAIAAAAEAAgABAAMAAIAAAAEAAkABAAMAAIAAAAEAAoABAAMAAIAAAAEAAsABAAMAAQAAAAEAAwACAAGAAcAAAAEAA0ACAAGAAgAAAAEAA4ACAAGAAgAAAAEAA8ACAAGAAgAAAAFAAAACAAGAAgAAAAFAAEAAAAGAAkAAAAFAAIABAAPAAEAAAAFAAMABAAPAAMAAAAFAAQABAAPAAMAAAAFAAUABAAPAAMAAAAFAAYABAAPAAMAAAAFAAcABAAOAAMAAAAFAAgABAANAAMAAAAFAAkABAANAAMAAAAFAAoABAANAAMAAAAFAAsABAANAAQAAAAFAAwACAAGAAcAAAAFAA0ACAAGAAgAAAAFAA4ACAAGAAgAAAAFAA8ACAAGAAgAAAAGAAAACAAGAAgAAAAGAAIACAAMAAgAAAAGAAMACAAMAAgAAAAGAAQACAAMAAgAAAAGAAUACAAMAAgAAAAGAAYACAAFAAkAAAAGAAcACgAIAAQAAAAGAAgACgAIAAUAAAAGAAkACgAIAAUAAAAGAAoACgAIAAUAAAAGAAsACQAIAAUAAAAGAAwACAAGAAcAAAAGAA0ACAAGAAgAAAAGAA4ACAAGAAgAAAAGAA8ACAAGAAgAAAAHAAAACAAGAAgAAAAHAAEACAAPAAgAAAAHAAIACAAPAAkAAAAHAAcACgAKAAQAAAAHAAgACgAKAAUAAAAHAAkACgAKAAUAAAAHAAoACQABAAEAAAAHAAsACQABAAEAAAAHAAwACAAGAAcAAAAHAA0ACAAGAAgAAAAHAA4ACAAGAAgAAAAHAA8ACAAGAAgAAAAIAA0ACAAGAAgAAAAIAA4ACAAGAAgAAAAIAA8ACAAGAAgAAAAJAA0ACAAGAAgAAAAJAA4ACAAGAAgAAAAJAA8ACAAGAAgAAAAKAA0ACAAGAAgAAAAKAA4ACAAGAAgAAAAKAA8ACAAGAAgAAAALAA0ACAAGAAgAAAALAA4ACAAGAAgAAAALAA8ACAAGAAgAAAAMAA0ACAAGAAgAAAAMAA4ACAAGAAgAAAAMAA8ACAAGAAgAAAANAA0ACAAGAAgAAAANAA4ACAAGAAgAAAANAA8ACAAGAAgAAAAOAA0ACAAGAAgAAAAOAA4ACAAGAAgAAAAOAA8ACAAGAAgAAAAPAA0ACAAGAAgAAAAPAA4ACAAGAAgAAAAPAA8ACAAGAAgAAAAQAA0ACAAGAAgAAAAQAA4ACAAGAAgAAAAQAA8ACAAGAAgAAAARAA0ACAAGAAgAAAARAA4ACAAGAAgAAAARAA8ACAAGAAgAAAASAA0ACAAGAAgAAAASAA4ACAAGAAgAAAASAA8ACAAGAAgAAAATAA0ACAAGAAgAAAATAA4ACAAGAAgAAAATAA8ACAAGAAgAAAAUAA0ACAAGAAgAAAAUAA4ACAAGAAgAAAAUAA8ACAAGAAgAAAAVAA0ACAAGAAgAAAAVAA4ACAAGAAgAAAAVAA8ACAAGAAgAAAAWAA0ACAAGAAgAAAAWAA4ACAAGAAgAAAAWAA8ACAAGAAgAAAAXAA0ACAAGAAgAAAAXAA4ACAAGAAgAAAAXAA8ACAAGAAgAAAAYAA0ACAAGAAgAAAAYAA4ACAAGAAgAAAAYAA8ACAAGAAgAAAAZAA0ACAAGAAgAAAAZAA4ACAAGAAgAAAAZAA8ACAAGAAgAAAAaAA0ACAAGAAgAAAAaAA4ACAAGAAgAAAAaAA8ACAAGAAgAAAAbAA0ACAAGAAgAAAAbAA4ACAAGAAgAAAAbAA8ACAAGAAgAAAAaAAAACAAGAAgAAAAaAAEACAAGAAgAAAAaAAIACAAGAAgAAAAaAAMACAAGAAgAAAAaAAQACAAGAAgAAAAaAAUACAAGAAgAAAAaAAYACAAGAAgAAAAaAAcACAAGAAgAAAAaAAgACAAGAAgAAAAaAAkACAAGAAgAAAAaAAoACAAGAAgAAAAaAAsACAAGAAgAAAAaAAwACAAGAAgAAAAbAAAACAAGAAgAAAAbAAEACAAGAAgAAAAbAAIACAAGAAgAAAAbAAMACAAGAAgAAAAbAAQACAAGAAgAAAAbAAUACAAGAAgAAAAbAAYACAAGAAgAAAAbAAcACAAGAAgAAAAbAAgACAAGAAgAAAAbAAkACAAGAAgAAAAbAAoACAAGAAgAAAAbAAsACAAGAAgAAAAbAAwACAAGAAgAAAACAP7/CAAGAAgAAAACAP//CAAGAAgAAAADAP7/CAAGAAgAAAADAP//CAAGAAgAAAAEAP7/CAAGAAgAAAAEAP//CAAGAAgAAAAFAP7/CAAGAAgAAAAFAP//CAAGAAgAAAAGAP7/CAAGAAgAAAAGAP//CAAGAAgAAAAHAP7/CAAGAAgAAAAHAP//CAAGAAgAAAAIAP7/CAAGAAgAAAAIAP//CAAGAAgAAAAJAP7/CAAGAAgAAAAJAP//CAAGAAgAAAAKAP7/CAAGAAgAAAAKAP//CAAGAAgAAAALAP7/CAAGAAgAAAALAP//CAAGAAgAAAAMAP7/CAAGAAgAAAAMAP//CAAGAAgAAAANAP7/CAAGAAgAAAANAP//CAAGAAgAAAAOAP7/CAAGAAgAAAAOAP//CAAGAAgAAAAPAP7/CAAGAAgAAAAPAP//CAAGAAgAAAAQAP7/CAAGAAgAAAAQAP//CAAGAAgAAAARAP7/CAAGAAgAAAARAP//CAAGAAgAAAASAP7/CAAGAAgAAAASAP//CAAGAAgAAAATAP7/CAAGAAgAAAATAP//CAAGAAgAAAAUAP7/CAAGAAgAAAAUAP//CAAGAAgAAAAVAP7/CAAGAAgAAAAVAP//CAAGAAgAAAAWAP7/CAAGAAgAAAAWAP//CAAGAAgAAAAXAP7/CAAGAAgAAAAXAP//CAAGAAgAAAAYAP7/CAAGAAgAAAAYAP//CAAGAAgAAAAZAP7/CAAGAAgAAAAZAP//CAAGAAgAAAAaAP7/CAAGAAgAAAAaAP//CAAGAAgAAAAbAP7/CAAGAAgAAAAbAP//CAAGAAgAAAAUAAYACAANAAMAAAAVAAkACAANAAMAAAAWAAkACQAAAAAAAAAUAAMACAANAAMAAAAUAAQACAANAAMAAAAQAAMABAANAAMAAAARAAMABAANAAMAAAASAAMACAAJAAwAAAASAAIACAAOAAEAAAATAAIACAAOAAEAAAAUAAIACAAOAAEAAAAKAAEACAALAAsAAAAYAAYACAAMAAgAAAACAAIABAAPAAkAAAACAAMABAAPAAkAAAACAAQABAAPAAkAAAACAAUABAAPAAkAAAAGAAEACAAJAAkAAAAHAAYACAAHAAkAAAAHAAUACAAPAAkAAAAHAAQACAAPAAkAAAAHAAMACAAPAAkAAAAEAAEABAALAAsAAAA=")
tile_set = ExtResource("7_v4nhv")
rendering_quadrant_size = 64

[node name="layer2" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAAKAAEACAALAAsAAAAEAAEABAALAAsAAAASAAUACAANAAwAAAATAAUACAAOAAwAAAAOAAcACAAMAA0AAAAJAAMACAAMAA0AAAAUAAIACAAMAAwAAAAQAAIACAALAAwAAAA=")
tile_set = ExtResource("7_v4nhv")
rendering_quadrant_size = 64

[node name="special" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AABOAAoAAAAOABEAAABOAAkAAAAOABEAAABOAA0AAAAOABIAAAAFAAgACAAOABEAAAAIAAgACAAQABEAAAAFAAoACAAOABMAAAAFAAkACAAOABIAAAAIAAkACAAQABIAAAALAAkACAALAA0AAAAWAAUACAAUAA0AAAASAAMACAAUAAsAAAANAAMACAAUAAsAAAAJAAIACAALAA0AAAAKAAUACAALAA0AAAAVAAcACAALAA0AAAARAAgACAAVAA0AAAASAAUACAAUAA0AAAASAAYACAANAA0AAAATAAUACAAVAA0AAAATAAYACAAOAA0AAAAEAAMACAAMAAwAAAADAAUACAAMAA0AAAAPAAsACAATAA0AAAAMAAkACAATAA0AAAAWAAgACAAVAA0AAAAVAAsACAAVAA0AAAAXAAUACAAVAA0AAAAMAAMACAATAAsAAAAPAAkACAATAAsAAAAOAAkACAAVAA0AAAARAAcACAAaAAgAAAAVAAUACAAaAAgAAAATAAcACAAZAAgAAAATAAkACAAZAAcAAAAWAAYACAAVAAsAAAAVAAYACAAaAAcAAAAVAAgACAAaAAgAAAAOAAgACAAWAAgAAAAPAAgACAAUAA0AAAAQAAgACAAVAAkAAAASAAcACAAUAA0AAAANAAkACAAUAA0AAAAUAAsACAAUAA0AAAATAAsACAAUAA0AAAASAAsACAAUAA0AAAARAAsACAAUAA0AAAAQAAsACAAUAA0AAAAQAAQACAAVAAwAAAAQAAUACAAVAAwAAAATAAQACAAVAAwAAAAXAAQACAAVAAwAAAAWAAcACAAVAAwAAAAOAAcACAAVAAwAAAAOAAYACAAVAAwAAAAVAAkACAAVAAwAAAAVAAoACAAVAAwAAAAPAAoACAATAAwAAAATAAgACAATAAwAAAAMAAgACAATAAwAAAAMAAcACAATAAwAAAAMAAYACAATAAwAAAAMAAUACAATAAwAAAAMAAQACAATAAwAAAAOAAMACAAUAAsAAAAPAAMACAAUAAsAAAAQAAMACAAVAAoAAAARAAMACAAUAAsAAAATAAMACAAVAAoAAAAUAAMACAAUAAsAAAAVAAMACAAUAAsAAAAWAAMACAAUAAsAAAAXAAMACAAVAAsAAAAQAAkACAAUAAsAAAARAAkACAAUAAsAAAASAAkACAAUAAsAAAAOAAoACAALAAwAAAAXAAgACAAMAA0AAAA=")
tile_set = ExtResource("7_v4nhv")

[node name="jembatan1" type="Sprite2D" parent="special"]
position = Vector2(448, 640)
texture = SubResource("AtlasTexture_6o6t4")
offset = Vector2(32, -32)

[node name="jembatan2" type="Sprite2D" parent="special"]
visible = false
position = Vector2(384, 640)
texture = SubResource("AtlasTexture_w6kyw")
offset = Vector2(32, -32)

[node name="t1" type="RigidBody2D" parent="special"]
position = Vector2(1088, 337)
mass = 0.001
gravity_scale = 0.0

[node name="Sprite2D" type="Sprite2D" parent="special/t1"]
position = Vector2(0, 1)
texture = SubResource("AtlasTexture_0se1d")
offset = Vector2(32, 32)

[node name="Sprite2D3" type="Sprite2D" parent="special/t1"]
position = Vector2(0, -63)
texture = SubResource("AtlasTexture_gwuxe")
offset = Vector2(32, 32)

[node name="Sprite2D2" type="Sprite2D" parent="special/t1"]
position = Vector2(0, 54)
texture = SubResource("AtlasTexture_0se1d")
offset = Vector2(32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="special/t1"]
position = Vector2(55, 50)
shape = SubResource("RectangleShape2D_tuvn4")

[node name="t2" type="RigidBody2D" parent="special"]
position = Vector2(978, 401)
mass = 0.001
gravity_scale = 0.0

[node name="Sprite2D" type="Sprite2D" parent="special/t2"]
position = Vector2(0, 1)
texture = SubResource("AtlasTexture_0se1d")
offset = Vector2(32, 32)

[node name="Sprite2D3" type="Sprite2D" parent="special/t2"]
position = Vector2(0, -63)
texture = SubResource("AtlasTexture_4dpw2")
offset = Vector2(32, 32)

[node name="Sprite2D2" type="Sprite2D" parent="special/t2"]
position = Vector2(0, 50)
texture = SubResource("AtlasTexture_0se1d")
offset = Vector2(32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="special/t2"]
position = Vector2(55, 50)
shape = SubResource("RectangleShape2D_tuvn4")

[node name="exit" type="Area2D" parent="."]
position = Vector2(256, 65)
collision_layer = 273
collision_mask = 273

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_flx8a")

[node name="cek_grup" type="Node2D" parent="."]
position = Vector2(256, 129)

[node name="cek a" parent="cek_grup" instance=ExtResource("9_ceywf")]
position = Vector2(768, 512)
scale = Vector2(2, 2)
nama_cek = "a"

[node name="cek t" parent="cek_grup" instance=ExtResource("9_ceywf")]
position = Vector2(832, 512)
scale = Vector2(2, 2)
nama_cek = "t"

[node name="cek l" parent="cek_grup" instance=ExtResource("9_ceywf")]
position = Vector2(896, 512)
scale = Vector2(2, 2)
nama_cek = "l"

[node name="cek e" parent="cek_grup" instance=ExtResource("9_ceywf")]
position = Vector2(960, 512)
scale = Vector2(2, 2)
nama_cek = "e"

[node name="cek t 2" parent="cek_grup" instance=ExtResource("9_ceywf")]
position = Vector2(1024, 512)
scale = Vector2(2, 2)
nama_cek = "t"

[node name="kotak_grup" type="Node2D" parent="."]
position = Vector2(6, -134)

[node name="a" parent="kotak_grup" instance=ExtResource("10_4djw5")]
position = Vector2(1401, 388)
nama_kotak = "a"

[node name="t" parent="kotak_grup" instance=ExtResource("10_4djw5")]
position = Vector2(956, 391)
nama_kotak = "t"

[node name="l" parent="kotak_grup" instance=ExtResource("10_4djw5")]
position = Vector2(1341, 580)
nama_kotak = "l"

[node name="e" parent="kotak_grup" instance=ExtResource("10_4djw5")]
position = Vector2(828, 639)
nama_kotak = "e"

[node name="t 2" parent="kotak_grup" instance=ExtResource("10_4djw5")]
position = Vector2(1147, 386)
nama_kotak = "t"

[node name="i" parent="kotak_grup" instance=ExtResource("10_4djw5")]
position = Vector2(833, 440)
nama_kotak = "i"

[node name="door" parent="." instance=ExtResource("11_2tewk")]
position = Vector2(256, 449)

[node name="Lever" parent="." instance=ExtResource("12_3c4dj")]
position = Vector2(1408, 417)

[node name="Lever2" parent="." instance=ExtResource("12_3c4dj")]
position = Vector2(1149, 532)

[node name="Player" parent="." instance=ExtResource("13_ptffg")]
position = Vector2(675, 205)
scale = Vector2(2, 2)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(8, -7)
zoom = Vector2(1.5, 1.5)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 120.0
one_shot = true

[node name="lobang" type="RigidBody2D" parent="."]
position = Vector2(448, 512)
collision_layer = 17
collision_mask = 0
sleeping = true
lock_rotation = true
freeze = true
freeze_mode = 1

[node name="ana" type="CollisionShape2D" parent="lobang"]
position = Vector2(0, 97)
shape = SubResource("RectangleShape2D_w2swu")

[node name="dinding" type="RigidBody2D" parent="."]
position = Vector2(448, 449)
collision_layer = 17
collision_mask = 0
sleeping = true
lock_rotation = true
freeze = true
freeze_mode = 1

[node name="anal" type="CollisionShape2D" parent="dinding"]
position = Vector2(0, 36)
shape = SubResource("CapsuleShape2D_b6gsv")

[node name="anal2" type="CollisionShape2D" parent="dinding"]
position = Vector2(0, 279)
shape = SubResource("CapsuleShape2D_b6gsv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wrei7")
}

[node name="buku" parent="." instance=ExtResource("14_d4b6w")]
position = Vector2(891, 200)
hint_text = "Olahragawan yang
Mengikuti Perlombaan"

[connection signal="_exit" from="ui_layer/papan" to="." method="_exit"]
[connection signal="pressed" from="ui_layer/btn_con/reset_btn" to="." method="_on_touch_screen_button_pressed"]
[connection signal="pressed" from="ui_layer/btn_con/pauseBtn" to="." method="_btn_pause"]
[connection signal="body_entered" from="exit" to="." method="_finish"]
[connection signal="activated" from="cek_grup/cek a" to="." method="_send_cek"]
[connection signal="deactivated" from="cek_grup/cek a" to="." method="_exit_cek"]
[connection signal="activated" from="cek_grup/cek t" to="." method="_send_cek"]
[connection signal="deactivated" from="cek_grup/cek t" to="." method="_exit_cek"]
[connection signal="activated" from="cek_grup/cek l" to="." method="_send_cek"]
[connection signal="deactivated" from="cek_grup/cek l" to="." method="_exit_cek"]
[connection signal="activated" from="cek_grup/cek e" to="." method="_send_cek"]
[connection signal="deactivated" from="cek_grup/cek e" to="." method="_exit_cek"]
[connection signal="activated" from="cek_grup/cek t 2" to="." method="_send_cek"]
[connection signal="deactivated" from="cek_grup/cek t 2" to="." method="_exit_cek"]
[connection signal="aksiLever" from="Lever" to="." method="_on_lever1"]
[connection signal="aksiLever" from="Lever2" to="." method="_on_lever2"]
